--- a/knowledge/大杂烩.md
+++ b/knowledge/大杂烩.md
@@ -91,7 +91,6 @@
 - 使用`for i,r := range s`这种形式得到的是“字符”(rune)
 
 4. 相关问题
-
 - 字符串为什么不可变？有何好处？
   - 安全性。防止意外修改共享字符串内容
   - 并发安全。多个goroutine可以同时读取一个字符串而无需加锁
@@ -107,7 +106,6 @@
 # goroutine相关
 
 1. 底层结构
-
 - 本质为go的轻量级并发执行单元，由go运行时（runtime）管理（runtime/runtime2.go）， “不要通过共享内存通信，而要通过通信共享内存”
    ```go
    type g struct {
@@ -138,8 +136,7 @@
   - 调度抢占：P和M是动态绑定的，可随时调整。go1.14之前是协作式调度（G长时间计算会霸占M）；go1.14以后是异步调度，由运行时计时器检测如果占用M超过10ms，则会触发信号，让G让出cpu
   - 退出回收：G执行完毕会被放入G池，防止频繁创建
 
-1. 相关问题
-
+2. 相关问题
 - goroutine和线程的区别？
   - 线程由操作系统创建，内核态线程，创建和切换开销大（切换成本为us），通常为几千个，单个线程启动时占内存大约为1M
   - goroutine由go运行时管理，用户态线程，创建和开销小（切换成本为几百ns），可达百万，单个goroutine启动时为2k（最大为1G），协作式调度，在遇到（函数调用、channel 操作、time.Sleep）时主动出让cpu
@@ -220,3 +217,47 @@
 - 自旋等待：锁被占用，则自旋等待（短暂的）
 - 阻塞等待：自旋失败，则进入等待队列（sema信号量控制）
 - 释放：Unlock时唤醒等待队列中的goroutine
+
+
+# 垃圾回收（GC）相关
+
+1. GC的流程（并不是完全停止程序，而是通过三色标记法和混合写屏障将STW控制在极短时间内）
+- 标记开始（STW，微妙级）：
+  - 触发：当堆内存增长到阈值时（GOGC控制）触发GC（栈内存由goroutine退出时自动释放，不参与GC）
+  - STW：暂停所有的goroutine
+  - 从根对象标记可达对象
+- 并发标记（无STW）：
+  - 从灰色队列中取出对象，标记为黑色
+- 终止标记（STW，微妙级）
+  - 处理并发标记期间的变更
+  - STW结束，恢复所有goroutine
+- 并发清理（无STW）：
+  - 后台清扫堆，回收不可达对象
+
+2. GC的本质是使用三色标记法和混合写屏障，避免长时间STW 
+- 白色：初始状态，未被标记，可能是垃圾
+- 灰色：中间状态，已被标记，但是其引用未被完全检查，需要继续扫描
+- 黑色：稳定状态，已被标记，且所有的引用都已检查
+  
+3. 相关问题
+- GC的使用方式
+  - 自动触发：堆内存增长到达一个阈值（上次 GC 后堆大小 *(1+GOGC/100)）；定时触发；内存分配速度过快
+  - 手动触发：通过通过runtime.GC()强制触发一次完整GC，会阻塞调用者直到GC完成
+
+- 内存泄漏场景（无法被GC回收）
+  -  全局变量引用堆对象
+  -  goroutine泄漏
+  -  切片被引用后未释放
+  -  未关闭资源或引用对象
+
+- 内存泄漏检测方式？
+  - pprof分析堆内存增长
+  - runtime.NumGoroutine()监控 goroutine 数量
+  - GODEBUG=gctrace=1观察堆内存是否持续增长
+
+- 如何优化GC的性能？（减少STW/降低GC开销）
+  - 减少内存分配：比如服用对象池，避免频繁创建临时对象
+  - 合理设置GOGC：IO密集型调大，内存敏感型调小
+  - 减少大对象分配：
+  - 避免长时间CPU占用
+  - 监控GC指标  
