--- a/knowledge/基础知识/大杂烩.md
+++ b/knowledge/基础知识/大杂烩.md
@@ -144,7 +144,7 @@
 - 如何优雅关闭goroutine？
   - 使用context传递取消信号
   - 在goroutine中检查context.Done()
-  - 使用select配合dedault避免阻塞  
+  - 使用select配合default避免阻塞  
 
 - goroutine为何会泄漏？如何避免？
   - goroutine未正确退出，导致泄漏
@@ -231,7 +231,7 @@
 - 终止标记（STW，微妙级）
   - 处理并发标记期间的变更
   - STW结束，恢复所有goroutine
-- 并发清理（无STW）：
+- 垃圾清理（无STW）：
   - 后台清扫堆，回收不可达对象
 
 2. GC的本质是使用三色标记法和混合写屏障，避免长时间STW 
@@ -260,4 +260,67 @@
   - 合理设置GOGC：IO密集型调大，内存敏感型调小
   - 减少大对象分配：
   - 避免长时间CPU占用
-  - 监控GC指标  
+  - 监控GC指标
+
+# channel相关
+
+1. 底层数据结构
+   ```go
+   type hchan struct {
+      qcount   uint           // 队列中数据总数
+      dataqsiz uint           // 环形队列大小
+      
+      buf      unsafe.Pointer // 指向环形队列，缓冲区（存储缓冲channel数据）
+
+      elemsize uint16         // 元素大小
+      closed   uint32         // 关闭状态
+      elemtype *_type         // 元素类型
+      
+      sendx    uint           // 发送索引（标记环形队列的读写位置）
+      recvx    uint           // 接收索引（标记环形队列的读写位置）
+      
+      recvq    waitq          // 接收等待队列（存储阻塞的goroutine）
+      sendq    waitq          // 发送等待队列（存储阻塞的goroutine）
+      
+      lock     mutex          // 互斥锁（保证多goroutine并发安全）
+   }
+   ```
+2. 操作流程
+- 发送流程
+  - 加锁
+  - 是否有等待的接收者，如果有则直接将数据拷贝到接收者
+  - 如果没有接收者，且缓冲区不为空，将数据加入缓冲区
+  - 否则就阻塞，加入到发送的等待队列中
+  - 解锁
+- 接收流程
+  - 加锁
+  - 是否有等待的发送者，如果有则直接从发送者获取数据
+  - 如果没有等待的发送者，且缓冲区不为空，则从缓冲区拿数据
+  - 否则就阻塞，加入到接收的等待队列
+  - 解锁
+3. 无缓冲Channel和有缓冲Channel
+- 无缓冲Channel
+  - `make(chan int)`
+  -  同步通信；发送会阻塞，直到有goroutine接收；接收会阻塞，直到有goroutine发送
+- 有缓冲Channel
+  - `make(chan int, 2)` 
+  - 异步通信；当缓冲区满时，发送操作会阻塞；当缓冲区为空时，接收操作会阻塞
+4. Channel的基本操作
+- 发送
+- 接收
+- 关闭
+  - 关闭后不能再发送数据，否则panic
+  - 可以继续接收剩余数据
+  - 对已关闭的Channel接收会返回零值
+  - 重复关闭会panic
+- 对nil的Channel发送、接收会永久阻塞
+- 关闭nil的Channel会panic
+5. 相关问题
+- Channel数据存储在哪里？
+  - 有缓冲的Channel，数据存在hchan结构体的buf指向的内存中
+  - 无缓冲Channel，数据直接在发送和接收的goroutine之间传递
+- Channel的缓冲区如何实现？
+  - 是一个环形队列，通过sendx和recvx指针控制
+- 为什么Channel的recvq和sendq是双向链表？
+  -  方便在阻塞时添加和移除goroutine，实现FIFO
+  -  
